fix: optimised title image/fixed page alignment
- compressed the title svg
- added a 'both-sides' scrollbar gutter to fix alignment issues
- fixed alignment on h elements

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -118,6 +118,7 @@ article {
 }
 
 .page_container {
+  scrollbar-gutter: stable both-edges;
   overflow: auto;
 }
 
@@ -137,7 +138,8 @@ article {
 .line {
   font-size: 26px;
   text-shadow: 3px 3px 0px black;
-  padding-left: 9px;
+  padding-left: 8px;
+  margin-bottom: 8px;
 }
 .line2 {
   font-size: 26px;
